--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -1318,7 +1318,7 @@ async function saveDashboardToCloud() {
                     'earthquake', 'hurricane', 'fire', 'explosion', 'plague', 'pandemic', 'disease', 'famine',
                     'revolt', 'rebellion', 'coup', 'overthrow', 'prison', 'arrest', 'trial', 'sentenced',
                     'defeat', 'surrender', 'retreat', 'casualties', 'victims', 'tragedy', 'accident', 'bomb', 'gun',
-                    'murder', 'killing', 'assassination', 'execution'
+                    'murder', 'killing', 'assassination', 'execution', 'hijacking', 'hijack', 'hijacked'
                 ];
                 const lowerText = String(text || '').toLowerCase();
                 return !negativeKeywords.some((keyword) => lowerText.includes(keyword));
