--- a/cadence/index.html
+++ b/cadence/index.html
@@ -305,7 +305,7 @@
           <label>
             Email
             <input type="email" id="edit-person-email" />
-            <p class="muted small-text">Email is read-only and synced from authentication.</p>
+            <p class="muted small-text">Email is read-only and required for authentication</p>
           </label>
           <div class="modal-actions">
             <button type="button" class="btn ghost" id="cancel-edit-person">Cancel</button>
