Remove 'optional' from Full Name label
Signed-off-by: Michael Dors <115369454+MichaelDors@users.noreply.github.com>

--- a/cadence/index.html
+++ b/cadence/index.html
@@ -329,7 +329,7 @@
             <input type="email" id="invite-email" placeholder="member@example.com" required />
           </label>
           <label>
-            Full Name (optional)
+            Full Name
             <input type="text" id="invite-name" placeholder="John Doe" />
             <p class="muted small-text">We'll use this to create their profile when they sign in.</p>
           </label>
