--- a/cadence/index.html
+++ b/cadence/index.html
@@ -41,7 +41,7 @@
 
       <section id="password-setup-gate" class="card hidden">
         <h2>Set Up Your Account</h2>
-        <p>You've been invited! Please set a password to complete your account setup.</p>
+        <p>Please set a password to complete your account setup.</p>
         <p class="muted small-text" style="margin-bottom: 1rem;">
           Account: <span class="password-setup-email"></span>
         </p>
