--- a/cadence/index.html
+++ b/cadence/index.html
@@ -105,6 +105,11 @@
               <button id="btn-create-song" class="btn primary hidden"><i class="fa-solid fa-file-circle-plus"></i> New Song</button>
             </div>
           </div>
+          <div style="margin-bottom: 1.5rem;">
+            <label>
+              <input type="text" id="songs-tab-search" placeholder="Search songs by title, BPM, key, time signature, or duration" style="width: 100%; padding: 0.75rem; background: var(--bg-secondary); border: 1px solid var(--border-color); border-radius: 0.5rem; color: var(--text-primary); font-size: 1rem;" />
+            </label>
+          </div>
           <div id="songs-catalog-list" class="song-list"></div>
         </div>
         
@@ -113,6 +118,11 @@
             <div>
               <h2><i class="fa-solid fa-address-book"></i> Team Members</h2>
             </div>
+          </div>
+          <div style="margin-bottom: 1.5rem;">
+            <label>
+              <input type="text" id="people-tab-search" placeholder="Search users" style="width: 100%; padding: 0.75rem; background: var(--bg-secondary); border: 1px solid var(--border-color); border-radius: 0.5rem; color: var(--text-primary); font-size: 1rem;" />
+            </label>
           </div>
           <div id="people-list" class="people-grid"></div>
         </div>
