Change button label from 'View as Member' to 'Member View'
Signed-off-by: Michael Dors <115369454+MichaelDors@users.noreply.github.com>

--- a/cadence/index.html
+++ b/cadence/index.html
@@ -16,7 +16,7 @@
         <h1>Cadence</h1>
       </div>
       <div class="header-actions">
-        <button id="btn-view-as-member" class="btn secondary hidden"><i class="fa-solid fa-user"></i> View as Member</button>
+        <button id="btn-view-as-member" class="btn secondary hidden"><i class="fa-solid fa-user"></i> Member View</button>
         <div id="user-info" class="user-info hidden">
           <span id="user-name"></span>
           <button id="btn-logout" class="btn ghost"><i class="fa-solid fa-arrow-right-from-bracket"></i></button>
