--- a/cadence/index.html
+++ b/cadence/index.html
@@ -158,6 +158,7 @@
                 <p id="detail-set-description" class="set-description"></p>
               </div>
               <div class="header-actions">
+                <button id="btn-view-as-member-detail" class="btn secondary hidden"><i class="fa-solid fa-user"></i> View as Member</button>
                 <button id="btn-edit-set-detail" class="btn secondary hidden">Edit Set</button>
                 <button id="btn-delete-set-detail" class="btn ghost hidden">Delete</button>
               </div>
