--- a/cadence/index.html
+++ b/cadence/index.html
@@ -159,7 +159,7 @@
               </div>
               <div class="header-actions">
                 <button id="btn-view-as-member-detail" class="btn secondary hidden"><i class="fa-solid fa-user"></i> View as Member</button>
-                <button id="btn-edit-set-detail" class="btn secondary hidden">Edit Set</button>
+                <button id="btn-edit-set-detail" class="btn secondary hidden"><i class="fa-solid fa-pencil"></i> Edit Set</button>
                 <button id="btn-delete-set-detail" class="btn ghost hidden">Delete</button>
               </div>
             </div>
